--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.19.0"
-rand = "0.8.3"
-argh = "0.1.4"
+crossterm = "^0.19"
+rand = "^0.8"
+argh = "^0.1"
